--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.52"
-tokio = { version = "1.17.0", features = ["full"] }
+serde = { version = "1.0.188", features = [ "derive" ] }
+serde_json = { version = "1.0.107", default-features = true }
+tokio = { version = "1.32.0", features = [ "full" ]}
 tokio-js-set-interval = "1.3.0"
 warp = "0.3.5"
